--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <meta property="og:image:url" content="https://xukui.cn/static/img/lei.jpg" />
     <meta property="og:description" content="Visiting research scholar at Tsinghua University.">
 
-    <!--Twitter Card Stuff-->
+    <!--Twitter Card Stuff
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Lei Sun">
     <meta name="twitter:description" content="Visiting research scholar at Tsinghua University.">
@@ -70,7 +70,7 @@
 
     <meta name="twitter:label1" value="Visiting Research Scholar" />
     <meta name="twitter:data1" value="Tsinghua University" />
-
+    -->
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="static/css/bootstrap-grid.min.css">
     <link rel="stylesheet" type="text/css" href="static/css/main.css">
