--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <meta property="og:url" content="https://rnalab.cn/">
     <meta property="og:site_name" content="Lei Sun">
     <meta property="og:image" content="static/img/lei.jpg" />
-    <meta property="og:image:url" content="https://xukui.cn/static/img/lei.jpg" />
+    <meta property="og:image:url" content="https://rnalab.cn/static/img/lei.jpg" />
     <meta property="og:description" content="Visiting research scholar at Tsinghua University.">
 
     <!--Twitter Card Stuff
