--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
                                 <img alt="Lei Sun (孙磊)" title="Lei Sun  (孙磊)" id="display-picture" src="static/img/lei.jpg" />
                             </div>
-                            <!-- Social media links 
+                            <!-- Social media links -->
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
                                 <ul id="social-media-ul">
                                     <li class="social-media">
@@ -140,7 +140,7 @@
                                             <span>kuixut</span>
                                         </a>
                                     </li>
-                              -->
+                             
                                     <!--<li class="social-media">
               <a target="_blank" href="https://orcid.org/0000-0001-7226-5479" itemprop="sameAs">
                 <i class="fab fa-fw fa-instagram" aria-hidden="true"></i>
