--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
                                     <li class="social-media">
                                         <a target="_blank" href="https://github.com/sunlei0227" itemprop="sameAs">
                                             <i class="fab fa-fw fa-github" aria-hidden="true"></i>
-                                            <span>kuixu</span>
+                                            <span>Lei Sun</span>
                                         </a>
                                     </li>
                                     <li class="website-school-of-life-science">
                                         <a target="_blank" href="https://scholar.google.com/citations?hl=zh-CN&user=qdB0PMYAAAAJ" itemprop="sameAs">
                                             <i class="fab fa-fw fa-twitter" aria-hidden="true"></i>
-                                            <span>kuixut</span>
+                                            <span>Lei Sun</span>
                                         </a>
                                     </li>
                              
