--- a/index.html
+++ b/index.html
@@ -125,9 +125,10 @@
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
                                 <img alt="Lei Sun (孙磊)" title="Lei Sun  (孙磊)" id="display-picture" src="static/img/lei.jpg" />
                             </div>
-                            <!-- Social media links -->
+                            <!--  Social media links -->
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
                                 <ul id="social-media-ul">
+                                    <!-- now don't use the media now!
                                     <li class="social-media">
                                         <a target="_blank" href="https://github.com/sunlei0227" itemprop="sameAs">
                                             <i class="fab fa-fw fa-github" aria-hidden="true"></i>
@@ -140,6 +141,7 @@
                                             <span>Lei Sun</span>
                                         </a>
                                     </li>
+                                    -->
                              
                                     <!--<li class="social-media">
               <a target="_blank" href="https://orcid.org/0000-0001-7226-5479" itemprop="sameAs">
