--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- fall back to site title if page has no title -->
     <title>
 
-        Lei Sun
+        Lei Sun (孙磊)
 
     </title>
     <link rel="canonical" href="https://rnalab.cn/">
@@ -583,7 +583,7 @@
 
             <div class="projects-container row">
                 <!-- exp: sensetime -->
-                <div class="col-md-12 col-sm-12 col-xs-12">
+<!--                <div class="col-md-12 col-sm-12 col-xs-12">
                     <div class="project-container side-banner row">
                         <div class="col-md-12 col-sm-12 col-xs-12">
                             <div class="project-title side-banner">
@@ -601,7 +601,7 @@
                 </div>
 
                 <!-- exp: cuhk -->
-                <div class="col-md-12 col-sm-12 col-xs-12">
+<!--                 <div class="col-md-12 col-sm-12 col-xs-12">
                     <div class="project-container side-banner row">
                         <div class="col-md-12 col-sm-12 col-xs-12">
                             <div class="project-title side-banner">
@@ -618,7 +618,7 @@
                     </div>
                 </div>
                 <!-- exp: cuhk -->
-                <div class="col-md-12 col-sm-12 col-xs-12">
+<!--                 <div class="col-md-12 col-sm-12 col-xs-12">
                     <div class="project-container side-banner row">
                         <div class="col-md-12 col-sm-12 col-xs-12">
                             <div class="project-title side-banner">
