--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     <b>Cell 2021</b>
                     </span>
                     <a class="paper-link button-div" href="https://www.cell.com/cell/fulltext/S0092-8674(21)00158-6" target="_blank">
-                    10.1016/j.cell.2021.02.008
+                    Cell
                     </a>
 
                     <a class="paper-link button-div" href="https://www.biorxiv.org/content/10.1101/2020.07.07.192732v1" target="_blank">
@@ -258,7 +258,7 @@
                     <b>Cell Research 2021</b>
                     </span>
                     <a class="paper-link button-div" href="https://doi.org/10.1038/s41422-021-00476-y" target="_blank">
-                    doi.org/10.1038/s41422-021-00476-y
+                    Cell Research
                     </a>
                     <a class="paper-link button-div" href="https://www.biorxiv.org/content/10.1101/2020.05.05.078774v1" target="_blank">
                     bioRxiv
@@ -319,84 +319,35 @@
                     NSMB
                     </a>
                     <a class="paper-link button-div" href="https://www.biorxiv.org/content/10.1101/399386v1.full" target="_blank">
-                    biorxiv
+                    bioRxiv
                     </a>
                     <a class="paper-link button-div" href="https://www.nature.com/articles/s41594-019-0213-2" target="_blank">
                     News & Views by NSMB journal
                     </a>
                 </div>
                 <div class="paper-banner col-md-12 col-sm-12 col-xs-12">
-                    <img src="static/img/research/NSMB.png" alt="stuctural dynamic" title="RNA structure maps across mammalian cellular compartments" />
+                    <img src="static/img/research/NSMB.png" alt="structural dynamic" title="RNA structure maps across mammalian cellular compartments" />
                 </div>
             </div>
             <hr />
 
-            <div class="paper-container row">
-                <div class="paper-title col-md-12 col-sm-12 col-xs-12">
-                    SCALE method for single-cell ATAC-seq analysis via latent feature extraction
-                    <!-- <div class="project-stars button-div" id="SCALE-stars"></div> -->
-                </div>
-                <!-- negative margin to account for superscripted asterisk -->
-                <div class="paper-authors col-md-12 col-sm-12 col-xs-12" style="margin-top: -4px;">
-                    Lei Xiong, <b>Kui Xu</b>, Kang Tian, Yanqiu Shao, Lei Tang, Ge Gao, Michael Zhang, Tao Jiang and Qiangfeng Cliff Zhang
-                </div>
-                <!-- arxiv and website link -->
-                <div class="paper-links col-md-12 col-sm-12 col-xs-12">
-                    <span class="paper-link">
-                    <b>Nature Communications 2019</b>
-                    </span>
-                    <a class="paper-link button-div" href="https://www.nature.com/articles/s41467-019-12630-7" target="_blank">
-                    nature.com/articles/s41467-019-12630-7
-                    </a>
-                    <a class="paper-link button-div" href="https://github.com/jsxlei/SCALE/wiki" target="_blank">
-                    wiki
-                    </a>
-                    <a class="paper-link button-div" href="https://github.com/jsxlei/SCALE" target="_blank">
-                    code
-                    </a>
-                    <a class="paper-link button-div" href="static/bibliography/scale_bibtex.txt" target="_blank">
-                    bibtex
-                    </a>
-                </div>
-                <div class="paper-banner col-md-12 col-sm-12 col-xs-12">
-                    <img src="static/img/research/scale_banner.png" alt="SCALE" title="SCALE method for single-cell ATAC-seq analysis via latent feature extraction" style="width: 60%;" />
-                </div>
-            </div>
-
-            <hr />
-
-
 
             <div class="paper-container row">
                 <div class="paper-title col-md-12 col-sm-12 col-xs-12">
-                    A<sup>2</sup>-Net: Molecular Structure Estimation from Cryo-EM Density Volumes
+                    Cryo-EM Structure of Human Dicer and Its Complexes with a Pre-miRNA Substrate. 
                 </div>
                 <div class="paper-authors col-md-12 col-sm-12 col-xs-12">
-                    <b>Kui Xu</b>, Zhe Wang, Jianping Shi, Hongsheng Li and Qiangfeng Cliff Zhang
+                    Zhongmin Liu*, Jia Wang*, Hang Cheng*, Xin Ke*, <b>Lei Sun</b>, Qiangfeng Cliff Zhang, Hong-Wei Wang
                 </div>
                 <!-- arxiv and website link -->
                 <div class="paper-links col-md-12 col-sm-12 col-xs-12">
                     <span class="paper-link">
-                    <b>AAAI 2019</b>
+                    <b>Cell 2018</b>
                     </span>
-                    <a class="paper-link button-div" href="https://aaai.org/ojs/index.php/AAAI/article/view/3918" target="_blank">
-                    aaai/3918
+                    <a class="paper-link button-div" href="https://www.sciencedirect.com/science/article/pii/S0092867418304525?via%3Dihub" target="_blank">
+                    Cell
                     </a>
-                    <a class="paper-link button-div" href="https://arxiv.org/abs/1901.00785" target="_blank">
-                    arxiv/1901.00785
-                    </a>
-                    <a class="paper-link button-div" href="http://zhanglab.net/A-2-Net/a-square-net/aaai19-xukui-poster.pdf" target="_blank">
-                    poster
-                    </a>
-                    <a class="paper-link button-div" href="http://zhanglab.net/A-2-Net/" target="_blank">
-                    website
-                    </a>
-                    <a class="paper-link button-div" href="static/bibliography/a2net_bibtex.txt" target="_blank">
-                    bibtex
-                    </a>
-                </div>
-                <div class="paper-banner col-md-12 col-sm-12 col-xs-12">
-                    <img src="static/img/research/a2-net_banner2.png" alt="A^2-Net" title="A^2-Net: Molecular Structure Estimation from Cryo-EM Density Volumes" />
+
                 </div>
             </div>
 
@@ -404,23 +355,20 @@
 
             <div class="paper-container row">
                 <div class="paper-title col-md-12 col-sm-12 col-xs-12">
-                    SegVoxelNet: Exploring Semantic Context and Depth-aware Features for 3D Vehicle Detection from Point Cloud
+                    Integrative Analysis of Zika Virus Genome RNA Structure Reveals Critical Determinants of Viral Infectivity.
                 </div>
                 <div class="paper-authors col-md-12 col-sm-12 col-xs-12">
-                    Hongwei Yi, Shaoshuai Shi, Mingyu Ding, Jiankai Sun, <b>Kui Xu</b>, Hui Zhou, Zhe Wang, Sheng Li and Guoping Wang
+                     Pan Li*, Yifan Wei*, Miao Mei*,Lei Tang*, <b>Lei Sun</b>, Wenze Huang, Jianyu Zhou, Chunlin Zou, Shaojun Zhang, Cheng-Feng Qin, Tao Jiang, Jianfeng Dai, Xu Tan, Qiangfeng Cliff Zhang
                 </div>
                 <!-- arxiv and website link -->
                 <div class="paper-links col-md-12 col-sm-12 col-xs-12">
                     <span class="paper-link">
-                    <b>ICRA 2020</b>
+                    <b>Cell Host & Microbe 2018</b>
                     </span>
-                    <a class="paper-link button-div" href="https://arxiv.org/pdf/2002.05316" target="_blank">
-                    arxiv/2002.05316
+                    <a class="paper-link button-div" href="https://www.sciencedirect.com/science/article/pii/S1931312818305493" target="_blank">
+                    Cell Host & Microbe
                     </a>
 
-                    <a class="paper-link button-div" href="static/bibliography/segvoxelnet_bibtex.txt" target="_blank">
-                    bibtex
-                    </a>
                 </div>
             </div>
 
@@ -428,74 +376,18 @@
 
             <div class="paper-container row">
                 <div class="paper-title col-md-12 col-sm-12 col-xs-12">
-                    Bioactive functionalized monolayer graphene for high-resolution cryo-electron microscopy
+                    RNA Regulations and Functions Decoded by Transcriptome-wide RNA Structure Probing.
                 </div>
                 <div class="paper-authors col-md-12 col-sm-12 col-xs-12">
-                    Nan Liu, Jincan Zhang, Yanan Chen, Chuan Liu, Xing Zhang, <b>Kui Xu</b>, Jie Wen, Zhipu Luo, Shulin Chen, Peng Gao, Kaicheng Jia, Zhongfan Liu, Hailin Peng and Hong-Wei Wang
+                    Meiling Piao, <b>Lei Sun</b>, Qiangfeng Cliff Zhang
                 </div>
                 <!-- arxiv and website link -->
                 <div class="paper-links col-md-12 col-sm-12 col-xs-12">
                     <span class="paper-link">
-                    <b>Journal of the American Chemical Society (JACS) 2019</b>
+                    <b>Genomics Proteomics Bioinformatics 2017</b>
                     </span>
-                    <a class="paper-link button-div" href="https://pubs.acs.org/doi/abs/10.1021/jacs.8b13038" target="_blank">
-                    JACS, 2019, 141, 9, 4016–4025
-                    </a>
-
-                    <a class="paper-link button-div" href="static/bibliography/jacs_bibtex.txt" target="_blank">
-                    bibtex
-                    </a>
-                </div>
-            </div>
-
-            <hr />
-
-            <div class="paper-container row">
-                <div class="paper-title col-md-12 col-sm-12 col-xs-12">
-                    RISE: a database of RNA interactome from sequencing experiments
-                </div>
-                <div class="paper-authors col-md-12 col-sm-12 col-xs-12">
-                    Jing Gong*, Di Shao*, <b>Kui Xu</b>, Zhipeng Lu, Zhi John Lu, Yucheng T. Yang and Qiangfeng Cliff Zhang
-                </div>
-                <!-- arxiv and website link -->
-                <div class="paper-links col-md-12 col-sm-12 col-xs-12">
-                    <span class="paper-link">
-                    <b>Nucleic Acids Research 2018</b>
-                    </span>
-                    <a class="paper-link button-div" href="https://academic.oup.com/nar/article-abstract/46/D1/D194/4344571" target="_blank">
-                    NAR, 2018, 46, D1, D194–D201
-                    </a>
-                    <a class="paper-link button-div" href="http://rise.life.tsinghua.edu.cn/" target="_blank">
-                    server
-                    </a>
-                    <a class="paper-link button-div" href="static/bibliography/rise_bibtex.txt" target="_blank">
-                    bibtex
-                    </a>
-                </div>
-            </div>
-
-            <hr />
-
-            <div class="paper-container row">
-                <div class="paper-title col-md-12 col-sm-12 col-xs-12">
-                    Reweighted sparse subspace clustering
-                </div>
-                <div class="paper-authors col-md-12 col-sm-12 col-xs-12">
-                    Jun Xu, <b>Kui Xu</b>, Ke Chen and Jishou Ruan
-                </div>
-                <!-- arxiv and website link -->
-                <div class="paper-links col-md-12 col-sm-12 col-xs-12">
-                    <span class="paper-link">
-                    <b>Computer Vision and Image Understanding 2015</b>
-                    </span>
-                    <a class="paper-link button-div" href="http://www.sciencedirect.com/science/article/pii/S1077314215000879" target="_blank">
-                    CVIU, 2015, 138, 25-37
-                    </a>
-                    <a class="paper-link button-div" href="https://csjunxu.github.io/paper/2015CVIU/RSSC.zip" target="_blank">
-                    code
-                    </a>
-                    <a class="paper-link button-div" href="static/bibliography/rssc_bibtex.txt" target="_blank">
-                    bibtex
+                    <a class="paper-link button-div" href="https://www.sciencedirect.com/science/article/pii/S1672022917301389?via%3Dihub" target="_blank">
+                    Genomics Proteomics Bioinformatics
                     </a>
                 </div>
             </div>
