--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
             <div class="paper-container row">
                 <div class="paper-title col-md-12 col-sm-12 col-xs-12">
-                    <i>In vivo</i> structural characterization of the whole SARS-CoV-2 RNA genome identifies host cell target proteins vulnerable to re-purposed drugs
+                    7. <i>In vivo</i> structural characterization of the whole SARS-CoV-2 RNA genome identifies host cell target proteins vulnerable to re-purposed drugs
                 </div>
                 <div class="paper-authors col-md-12 col-sm-12 col-xs-12">
                     <b>Lei Sun*</b>, Pan Li*, Xiaohui Ju*, Jian Rao*, Wenze Huang*, Shaojun Zhang, Tuanlin Xiong, Kui Xu, Xiaolin Zhou, Lili Ren, Qiang Ding, Jianwei Wang and Qiangfeng Cliff Zhang
@@ -246,7 +246,7 @@
             <hr />
             <div class="paper-container row">
                 <div class="paper-title col-md-12 col-sm-12 col-xs-12">
-                    Predicting dynamic cellular protein-RNA interactions using deep learning and in vivo RNA structure
+                    6. Predicting dynamic cellular protein-RNA interactions using deep learning and in vivo RNA structure
                     <!-- <div class="project-stars button-div" id="PrismNet-stars"></div> -->
                 </div>
                 <div class="paper-authors col-md-12 col-sm-12 col-xs-12">
@@ -283,7 +283,7 @@
 
             <div class="paper-container row">
                 <div class="paper-title col-md-12 col-sm-12 col-xs-12">
-                    Comparison of viral RNA-host protein interactomes across pathogenic RNA viruses informs rapid antiviral drug discovery for SARS-CoV-2.
+                    5. Comparison of viral RNA-host protein interactomes across pathogenic RNA viruses informs rapid antiviral drug discovery for SARS-CoV-2.
                 </div>
                 <div class="paper-authors col-md-12 col-sm-12 col-xs-12">
                     Shaojun Zhang*, Wenze Huang*, Lili Ren*, Xiaohui Ju*, Mingli Gong*，Jian Rao*, <b>Sun Lei</b>, Pan Li, Qiang Ding, Jianwei Wang, Qiangfeng Zhang
@@ -304,7 +304,7 @@
 
             <div class="paper-container row">
                 <div class="paper-title col-md-12 col-sm-12 col-xs-12">
-                    RNA structure maps across mammalian cellular compartments.
+                    4. RNA structure maps across mammalian cellular compartments.
                     <!-- <div class="project-stars button-div" id="VRmol-stars"></div> -->
                 </div>
                 <div class="paper-authors col-md-12 col-sm-12 col-xs-12">
@@ -334,7 +334,7 @@
 
             <div class="paper-container row">
                 <div class="paper-title col-md-12 col-sm-12 col-xs-12">
-                    Cryo-EM Structure of Human Dicer and Its Complexes with a Pre-miRNA Substrate. 
+                    3. Cryo-EM Structure of Human Dicer and Its Complexes with a Pre-miRNA Substrate. 
                 </div>
                 <div class="paper-authors col-md-12 col-sm-12 col-xs-12">
                     Zhongmin Liu*, Jia Wang*, Hang Cheng*, Xin Ke*, <b>Lei Sun</b>, Qiangfeng Cliff Zhang, Hong-Wei Wang
@@ -355,7 +355,7 @@
 
             <div class="paper-container row">
                 <div class="paper-title col-md-12 col-sm-12 col-xs-12">
-                    Integrative Analysis of Zika Virus Genome RNA Structure Reveals Critical Determinants of Viral Infectivity.
+                    2. Integrative Analysis of Zika Virus Genome RNA Structure Reveals Critical Determinants of Viral Infectivity.
                 </div>
                 <div class="paper-authors col-md-12 col-sm-12 col-xs-12">
                      Pan Li*, Yifan Wei*, Miao Mei*,Lei Tang*, <b>Lei Sun</b>, Wenze Huang, Jianyu Zhou, Chunlin Zou, Shaojun Zhang, Cheng-Feng Qin, Tao Jiang, Jianfeng Dai, Xu Tan, Qiangfeng Cliff Zhang
@@ -376,7 +376,7 @@
 
             <div class="paper-container row">
                 <div class="paper-title col-md-12 col-sm-12 col-xs-12">
-                    RNA Regulations and Functions Decoded by Transcriptome-wide RNA Structure Probing.
+                    1. RNA Regulations and Functions Decoded by Transcriptome-wide RNA Structure Probing.
                 </div>
                 <div class="paper-authors col-md-12 col-sm-12 col-xs-12">
                     Meiling Piao, <b>Lei Sun</b>, Qiangfeng Cliff Zhang
