--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
             </script>
 
             <div class="footer">
-                ©2021, Kui Xu. | Template: <a href="https://kdexd.github.io/">this</a>
+                ©2022, Lei Sun | Template: <a href="https://kdexd.github.io/">this</a>
             </div>
 
         </div>
