--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
                 <p>
                 <strong>1.	Technology development</strong> <br />
                 Both including experimental and computational methods development. We have taken part in the development of many 
-                technologies including subcellular RNA structure determination (<a href="https://www.nature.com/articles/s41422-021-00476-y" target="_blank">Sun, NSMB, 2019 </a>)and RBP-RNA interaction prediction based 
-                on artificial intelligence (<a href="https://www.nature.com/articles/s41422-021-00476-y" target="_blank">Sun, Cell Research, 2021</a>).
+                technologies including subcellular RNA structure determination (<a href="https://www.nature.com/articles/s41422-021-00476-y" target="_blank">Sun et.al., NSMB, 2019 </a>)and RBP-RNA interaction prediction based 
+                on artificial intelligence (<a href="https://www.nature.com/articles/s41422-021-00476-y" target="_blank">Sun et.al., Cell Research, 2021</a>).
                 We are also interested in the single cell RNA structure determination, co-transcriptional transient RNA structure determination in the future.
                 </p>
             
@@ -201,7 +201,7 @@
                 <strong>2.	Biological question</strong> <br />
                  RNA structure and RBP-RNA interactions play key roles in post-transcriptional regulation. The regulatory network of viruses can be studied from the perspectives 
                  of RNA structure and RNA-protein interaction by icSHAPE, PrismNet, CLIP and other techniques. Antiviral drugs can be developed by targeting important structural 
-                 elements of viruses, or interacting host proteins (<a href="https://www.sciencedirect.com/science/article/pii/S0092867421001586?via%3Dihub" target="_blank">Sun, Cell, 2021</a>). 
+                 elements of viruses, or interacting host proteins (<a href="https://www.sciencedirect.com/science/article/pii/S0092867421001586?via%3Dihub" target="_blank">Sun et.al., Cell, 2021</a>). 
                  It is important to note that the integration of high-throughput sequencing, deep learning models, 
                  and experimental validation provides a viable idea to systematically study the role of RNA-binding proteins. For example, how do RBPs regulation gene expression during zebrafish development.   
               
