--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
 
             <p>
                 <strong>[Feb 2022]</strong> Our PrismNet method paper was awarded as the Top Ten Advances of 2021 in Bioinformatics in China by Genomics, Proteomics and Bioinformatics (GPB)<br />
-                <strong>[Jan 2021]</strong> Our <a href="https://www.biorxiv.org/content/10.1101/2020.05.05.078774v1" target="_blank">PrismNet method paper</a> accepted to <i>Cell Research</i>, congratulations to all the team members.<br />
-                <strong>[Nov 2020]</strong> Our <a href="https://www.biorxiv.org/content/10.1101/2020.07.07.192732v1" target="_blank">anti-SARS-CoV-2 drugs based on RNA structrues paper</a> accepted to <i>Cell</i>, congratulations to all the team members.<br
+                <strong>[Jan 2021]</strong> Our <a href="https://www.biorxiv.org/content/10.1101/2020.05.05.078774v1" target="_blank">PrismNet method paper</a> was accepted by <i>Cell Research</i>, congratulations to all the team members.<br />
+                <strong>[Nov 2020]</strong> Our <a href="https://www.biorxiv.org/content/10.1101/2020.07.07.192732v1" target="_blank">anti-SARS-CoV-2 drugs based on RNA structrues paper</a> was accepted by the top journal <i>Cell</i>, congratulations to all the team members.<br
                 />
-                <strong>[Feb 2019]</strong> Our <a href="https://www.biorxiv.org/content/10.1101/2020.07.07.192732v1" target="_blank">RNA structrual dynamics</a> paper in different cell compartemnts accepted to Nature Structural & Molecular Biology, congratulations to all the team members.<br />
+                <strong>[Feb 2019]</strong> Our <a href="https://www.biorxiv.org/content/10.1101/2020.07.07.192732v1" target="_blank">RNA structrual dynamics</a> paper in different cell compartemnts was accepted by Nature Structural & Molecular Biology, congratulations to all the team members.<br />
             </p>
             <hr />
 
