--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                  of RNA structure and RNA-protein interaction by icSHAPE, PrismNet, CLIP and other techniques. Antiviral drugs can be developed by targeting important structural 
                  elements of viruses, or interacting host proteins (<a href="https://www.sciencedirect.com/science/article/pii/S0092867421001586?via%3Dihub" target="_blank">Sun et.al., Cell, 2021</a>). 
                  It is important to note that the integration of high-throughput sequencing, deep learning models, 
-                 and experimental validation provides a viable idea to systematically study the role of RNA-binding proteins. For example, how do RBPs regulation gene expression during zebrafish development.   
+                 and experimental validation provides a viable idea to systematically study the role of RNA-binding proteins. For example, how do RBPs regulate gene expression during zebrafish development.   
               
                 </p>    
             
