--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
             
                 <p>
                 <strong>3. Technical applications</strong> <br />
-                    Based on previous work, we have identified a large number of conserved RNA structural units related to RNA translation, RNA degradation, etc. These RNA structure can be exploited to design 
-                    RNA molecules that better help the vaccine and drug development. Furthermore, the understanding of RNA structure and the application of artificial intelligence can help us to design better 
+                    Based on previous work, we have identified a large number of conserved RNA structural elements related to RNA translation, RNA degradation, etc. These RNA structures can be exploited to design 
+                    RNA molecules that better help the vaccine and RNA targeting drug development. Moreover, the understanding of RNA structure and the application of artificial intelligence can help us to design better 
                     gRNA in RNA therapy field. 
                 </p>
             </p>
