--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 
             <p>
                 <p>
-                We are looking for <b>Master, PhD and Postdoctoral fellows</b> who are eager to learn about RNA structure, RNA regulation, bioinformatics analysis, 
+                We are looking for <b>Master, PhD, Postdoctoral and Research Assistant fellows</b> who are eager to learn about RNA structure, RNA regulation, bioinformatics analysis, 
                 and artificial intelligence. We are proud of our work and strive to do rigorous science that matters.
                 </p>
             
