--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     <span class="paper-link">
                     <b>Nature Methods 2022</b>
                     </span>
-                    <a class="paper-link button-div" href="https://trebuchet.public.springernature.app/get_content/d8097687-9132-48a7-98ab-502a8c8c569e" target="_blank">
+                    <a class="paper-link button-div" href="https://www.nature.com/articles/s41592-022-01623-y" target="_blank">
                     Nature Methods
                     </a>
                 </div>
