--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <link rel="canonical" href="https://rnalab.cn/">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="static/ico/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="static/ico/dafenqi.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="static/ico/kui-72.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="static/ico/kui-72.png" />
     <link rel="apple-touch-icon" sizes="120x120" href="static/ico/kui-120.png" />
