--- a/index.html
+++ b/index.html
@@ -157,13 +157,14 @@
                     <!-- About -->
                     <div class="col-md-8 col-sm-8 col-xs-12">
                         <p align="justify">
-                            Currently, I am a Postdoc researcher at <a target="_blank" href="https://www.tsinghua.edu.cn/">Tsinghua University</a>, cooperating with <a target="_blank" href="http://zhanglab.net/team?index=1">Prof. Qiangfeng Cliff Zhang</a>.
-                            I will start my lab at <a target="_blank" href="http://www.lifesci.sdu.edu.cn/">Shandong University (Qingdao)</a> in November of 2022. I am broadly interested in RNA biology, especially RNA structure biology, RNA vaccine 
+                            
+                            I start my lab at <a target="_blank" href="http://www.lifesci.sdu.edu.cn/">Shandong University (Qingdao)</a> in December of 2022. I am broadly interested in RNA biology, especially RNA structure biology, RNA vaccine 
                             and adaptor design, and anti-RNA virus drug development (such as SARS-CoV-2). My lab will develop and use a <b>combination of computational and experimental methods</b> to interpret the structural and functional relationships 
                             of biological macromolecules, build the interaction network, uncover the regulation mechanism and find the potential therapy for diseases based on <b>high-throughput sequencing, bioinformatics analysis, artificial intelligence (AI) prediction,
                             and experimental validation</b>. 
                         </p>
                         <p align="justify">
+                            From 2019 to 2022， I am a Postdoc researcher at <a target="_blank" href="https://www.tsinghua.edu.cn/">Tsinghua University</a>, cooperating with <a target="_blank" href="http://zhanglab.net/team?index=1">Prof. Qiangfeng Cliff Zhang</a>.
                             Before my Postdoc period, I received my Ph.D. degree in the <a target="_blank" href="https://life.tsinghua.edu.cn/">School of Life Science</a>, Tsinghua University in 2019. Before I came to Tsinghua University, I received a bachelor's degree in <a target="_blank" href="https://www.tsxt.sdu.edu.cn/">Taishan College</a>, Shandong University in 2014.  
                         </p>
                         <p style="margin-top: 20px">
