--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             and experimental validation</b>. 
                         </p>
                         <p align="justify">
-                            From 2019 to 2022， I am a Postdoc researcher at <a target="_blank" href="https://www.tsinghua.edu.cn/">Tsinghua University</a>, cooperating with <a target="_blank" href="http://zhanglab.net/team?index=1">Prof. Qiangfeng Cliff Zhang</a>.
+                            From 2019 to 2022， I was a Postdoc researcher at <a target="_blank" href="https://www.tsinghua.edu.cn/">Tsinghua University</a>, cooperating with <a target="_blank" href="http://zhanglab.net/team?index=1">Prof. Qiangfeng Cliff Zhang</a>.
                             Before my Postdoc period, I received my Ph.D. degree in the <a target="_blank" href="https://life.tsinghua.edu.cn/">School of Life Science</a>, Tsinghua University in 2019. Before I came to Tsinghua University, I received a bachelor's degree in <a target="_blank" href="https://www.tsxt.sdu.edu.cn/">Taishan College</a>, Shandong University in 2014.  
                         </p>
                         <p style="margin-top: 20px">
