--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <div class="col-md-8 col-sm-8 col-xs-12">
                         <p align="justify">
                             
-                            I start my lab at <a target="_blank" href="http://www.lifesci.sdu.edu.cn/">Shandong University (Qingdao)</a> in December of 2022. I am broadly interested in RNA biology, especially RNA structure biology, RNA vaccine 
+                            I started my lab at <a target="_blank" href="http://www.lifesci.sdu.edu.cn/">Shandong University (Qingdao)</a> in December of 2022. I am broadly interested in RNA biology, especially RNA structure biology, RNA vaccine 
                             and adaptor design, and anti-RNA virus drug development (such as SARS-CoV-2). My lab will develop and use a <b>combination of computational and experimental methods</b> to interpret the structural and functional relationships 
                             of biological macromolecules, build the interaction network, uncover the regulation mechanism and find the potential therapy for diseases based on <b>high-throughput sequencing, bioinformatics analysis, artificial intelligence (AI) prediction,
                             and experimental validation</b>. 
