--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
             <p>
                 <strong>[Dec. 2022]</strong> Dr.Sun joined the School of Life Science, Shandong University and started the <a href="https://www.lifesci.sdu.edu.cn/info/1064/7587.htm" target="_blank">RNA structurome lab</a>.<br />
-                <strong>[Nov. 2022]</strong> Our <a href="https://www.nature.com/articles/s41422-022-00749-0" target="_blank">PrismNet method paper</a> win the 2021 Sanofi-Cell Research Outstanding Research Article Award<br />
+                <strong>[Nov. 2022]</strong> Our PrismNet method paper win <a href="https://www.nature.com/articles/s41422-022-00749-0" target="_blank">the 2021 Sanofi-Cell Research Outstanding Research Article Award</a>.<br />
                 <strong>[Oct. 2022]</strong> Our Review Article paper "Advances and opportunities in RNA structure experimental determination and computational modeling" was online at Nature Methods. congratulations to all the team members.<br />
                 <strong>[Feb. 2022]</strong> Our PrismNet method paper was awarded as the Top Ten Advances of 2021 in Bioinformatics in China by Genomics, Proteomics and Bioinformatics (GPB)<br />
                 <strong>[Jan. 2021]</strong> Our <a href="https://www.biorxiv.org/content/10.1101/2020.05.05.078774v1" target="_blank">PrismNet method paper</a> was accepted by <i>Cell Research</i>, congratulations to all the team members.<br />
