--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
                     </div>
                     <div id="navbar-ul-container">
                         <ul id="navbar-ul">
-                            <!-- <li class="nav-listitem">
-                                <a target="_blank" href="kui_cv.pdf">CV</a>
-                            </li> -->
+                            <li class="nav-listitem">
+                                <a target="_blank" href="https://www.lifesci.sdu.edu.cn/info/1064/7587.htm">School of Life Science</a>
+                            </li>
                             <li class="nav-listitem">
                                 <a target="_blank" href="https://scholar.google.com/citations?hl=zh-CN&user=qdB0PMYAAAAJ">Google Scholar</a>
                             </li>
