--- a/index.html
+++ b/index.html
@@ -458,6 +458,16 @@
                                   hah test
                                </p>
                             </div>
+                                
+                            <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 30">
+                                <img alt="Lei Sun (孙磊)" title="Lei Sun  (孙磊)" id="display-picture" src="static/img/lei.jpg" />
+                            </div>
+                            <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 30; text-align: center">
+                              <p align="justify">
+                                  hah test
+                               </p>
+                            </div>
+                            
                         </div>
                     </div>
                 </div>
