--- a/index.html
+++ b/index.html
@@ -460,7 +460,11 @@
                         </div>
                     </div>
                     <!-- About -->
-                    <div class="col-md-8 col-sm-8 col-xs-12">
+                    <div class="col-md-4 col-sm-4 col-xs-12">
+                        <img alt="Lei Sun (孙磊)" title="Lei Sun  (孙磊)" id="display-picture" src="static/img/lei.jpg" />
+                    </div>
+                    
+                    <div class="col-md-4 col-sm-4 col-xs-12">
                         <img alt="Lei Sun (孙磊)" title="Lei Sun  (孙磊)" id="display-picture" src="static/img/lei.jpg" />
                     </div>
                 </div>
