--- a/index.html
+++ b/index.html
@@ -438,37 +438,32 @@
 
             <hr />
     
-     <h2>Members</h2>
+ <!--      <h2>Members</h2>
             <hr />
 
     <div class="container">
         <div class="content">
             <div class="container">
                 <div class="row">
-                    <!-- Display picture and social media links -->
                     <div class="col-md-4 col-sm-4 col-xs-12">
                         <p></p>
                         <div class="row">
-                            <!-- Display picture -->
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
                                 <img alt="Lei Sun (孙磊)" title="Lei Sun  (孙磊)" id="display-picture" src="static/img/lei.jpg" />
                             </div>
-                            <!--  Social media links -->
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
                                 <p>Lei ,test
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <!-- About -->
+
                     <div class="col-md-4 col-sm-4 col-xs-12">
                         <p></p>
                         <div class="row">
-                            <!-- Display picture -->
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
                                 <img alt="Lei Sun (孙磊)" title="Lei Sun  (孙磊)" id="display-picture" src="static/img/lei.jpg" />
                             </div>
-                            <!--  Social media links -->
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
                                 <p>Lei ,test
                                 </p>
@@ -479,11 +474,9 @@
                     <div class="col-md-4 col-sm-4 col-xs-12">
                         <p></p>
                         <div class="row">
-                            <!-- Display picture -->
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
                                 <img alt="Lei Sun (孙磊)" title="Lei Sun  (孙磊)" id="display-picture" src="static/img/lei.jpg" />
                             </div>
-                            <!--  Social media links -->
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
                                 <p>Lei ,test
                                 </p>
@@ -497,7 +490,7 @@
             </div>
 
             <hr />
-
+--> 
     
   
 <
