--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                             Before my Postdoc period, I received my Ph.D. degree in the <a target="_blank" href="https://life.tsinghua.edu.cn/">School of Life Science</a>, Tsinghua University in 2019. Before I came to Tsinghua University, I received a bachelor's degree in <a target="_blank" href="https://www.tsxt.sdu.edu.cn/">Taishan College</a>, Shandong University in 2014.  
                         </p>
                         <p style="margin-top: 20px">
-                            Please feel free to directly contact me via e-mail for formal or informal inquiries: <b>sunlei0227 at hotmail dot com</b>.
+                            Please feel free to directly contact me via e-mail for formal or informal inquiries: <b>sunlei0227 at sdu.edu.cn</b>.
                         </p>
                     </div>
                 </div>
@@ -179,6 +179,7 @@
             <h2>What's New</h2>
 
             <p>
+                <strong>[Feb. 2023]</strong> Lingyun Xu joined our lab as a undergraduate student, welcome to Lingyun！
                 <strong>[Dec. 2022]</strong> Dr.Sun joined the School of Life Science, Shandong University and started the <a href="https://www.lifesci.sdu.edu.cn/info/1064/7587.htm" target="_blank">RNA structurome lab</a>.<br />
                 <strong>[Nov. 2022]</strong> Our PrismNet method paper win <a href="https://www.nature.com/articles/s41422-022-00749-0" target="_blank">the 2021 Sanofi-Cell Research Outstanding Research Article Award</a>.<br />
                 <strong>[Oct. 2022]</strong> Our Review Article paper "Advances and opportunities in RNA structure experimental determination and computational modeling" was online at Nature Methods. congratulations to all the team members.<br />
@@ -499,7 +500,7 @@
                     </a>
     
    <hr />
-<
+
  <!-- new part -->        
             <h2>Join us</h2>
 
@@ -521,7 +522,7 @@
                 </p>         
         
                 <p>
-                Please feel free to directly contact me via e-mail for formal or informal inquiries: <strong>sunlei0227 at hotmail dot com.</strong>
+                Please feel free to directly contact me via e-mail for formal or informal inquiries: <strong>sunlei0227 at hotmail dot com or sunlei0227 at sdu.edu.cn</strong>
                 </p>    
             </p>
 
