--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
             <h2>What's New</h2>
 
             <p>
-                <strong>[Feb. 2023]</strong> Lingyun Xu joined our lab as a undergraduate student, welcome to Lingyun！
+                <strong>[Feb. 2023]</strong> Yongkang Tang joined our lab as a research technician, welcome to Yongkang！<br />
+                <strong>[Feb. 2023]</strong> Lingyun Xu joined our lab as a undergraduate student, welcome to Lingyun！<br />
                 <strong>[Dec. 2022]</strong> Dr.Sun joined the School of Life Science, Shandong University and started the <a href="https://www.lifesci.sdu.edu.cn/info/1064/7587.htm" target="_blank">RNA structurome lab</a>.<br />
                 <strong>[Nov. 2022]</strong> Our PrismNet method paper win <a href="https://www.nature.com/articles/s41422-022-00749-0" target="_blank">the 2021 Sanofi-Cell Research Outstanding Research Article Award</a>.<br />
                 <strong>[Oct. 2022]</strong> Our Review Article paper "Advances and opportunities in RNA structure experimental determination and computational modeling" was online at Nature Methods. congratulations to all the team members.<br />
