--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                                 <img alt="Lingyun Xu (许凌云)" title="Lingyun Xu  (孙磊)" id="display-picture" src="static/img/lingyun.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
-                                <p>Lei ,test
+                                <p>Lingyun Xu (许凌云),undergraduate，Interested in artificial intelligence
                                 </p>
                             </div>
                         </div>
@@ -467,7 +467,7 @@
                                 <img alt="Yongkang Tang (唐永康)" title="Yongkang Tang  (唐永康)" id="display-picture" src="static/img/yongkang.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
-                                <p>Lei ,test
+                                <p>Yongkang Tang (唐永康),research technician，Interested in RNA structome and system analysis
                                 </p>
                             </div>
                         </div>
@@ -480,7 +480,7 @@
                                 <img alt="The next you " title="The next you" id="display-picture" src="static/img/logo.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
-                                <p>Lei ,test
+                                <p>The next you
                                 </p>
                             </div>
                         </div>
