--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                                 <img alt="The next you " title="The next you" id="display-picture" src="static/img/logo.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
-                                <p>The next you
+                                <p>We welcome you to join us！（欢迎你的加入！）
                                 </p>
                             </div>
                         </div>
