--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                         <p></p>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
-                                <img alt="Yongkang Tang (唐永康)" title="Yongkang Tang  (唐永康)" id="display-picture" src="static/img/yongkang.jpg" />
+                                <img alt="Yongkang Tang (唐永康)" title="Yongkang Tang  (唐永康)" id="display-picture" src="static/img/yongkang2.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
                                 <p>Yongkang Tang (唐永康),research technician，Interested in RNA structome and system analysis
