--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                         <p></p>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
-                                <img alt="Lingyun Xu (许凌云)" title="Lingyun Xu  (孙磊)" id="display-picture" src="static/img/lingyun.jpg" />
+                                <img alt="Lingyun Xu (许凌云)" title="Lingyun Xu  (许凌云)" id="display-picture" src="static/img/lingyun.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
                                 <p>Lingyun Xu (许凌云),undergraduate，Interested in artificial intelligence
